<resources>
    <string name="app_name">AppOrderFood</string>
    <!--Dang Nhap Dang Ky-->
    <string name="dangky">Đăng Ký</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="ngaysinh">Ngày Sinh</string>
    <string name="chungminh">CMND</string>
    <string name="dongy">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="gioitinhnam">Nam</string>
    <string name="gioitinhnu">Nữ</string>
    <string name="warning_tendangnhap">Vui lòng nhập tên đăng nhập</string>
    <string name="warning_matkhau">Vui lòng nhập mật khẩu</string>
    <string name="warning_thanhcong">Thành công</string>
    <string name="warning_thathbai">Thất bại</string>
    <string name="danngnhap">Đăng Nhập</string>

    <!--Navigation-->
    <string name="trangchu">Trang Chủ</string>
    <string name="thucdon">Thực Đơn</string>
    <string name="nhanvien">Nhân Viên</string>
    <string name="thongke">Thống Kê</string>
    <string name="caidat">Cài đặt</string>
    <string name="tennhanvien">Tên nhân viên</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>


    <!--Menu Item-->
    <string name="itThemBanAn">Thêm Bàn Ăn</string>

    <!--Them Ban An-->
    <string name="hintThemBanAn">Nhập Tên Bàn Ăn</string>
    <string name="banan">Bàn Ăn</string>

    <!--Them Thuc Don-->
    <string name="themthucdon">Thêm Thực Đơn</string>
    <string name="hintThemMonAn">Thêm món ăn</string>
    <string name="hintGiaTien">Giá tiền</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="themloaithucdon">Thêm Loại Thực Đơn</string>
    <string name="loaithucdon">Loại Thực Đơn</string>
    <string name="tenloaithucdon">Tên Loại</string>

    <string name="vuilongnhapdulieu">Vui lòng nhập dữ liệu</string>

    <string name="danhsachmonan">Danh sách món ăn</string>

</resources>
