<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/it_trangchu"
            android:title="@string/trangchu"
            android:icon="@drawable/trangchu"
            android:checked="true"
            />
        <item
            android:id="@+id/it_thucdon"
            android:title="@string/thucdon"
            android:icon="@drawable/logodangnhap"
            />
        <item
            android:id="@+id/it_nhanvien"
            android:title="@string/nhanvien"
            android:icon="@drawable/nhanvien"
            />
        <item
            android:id="@+id/it_thongke"
            android:title="@string/thongke"
            android:icon="@drawable/thongke"
            />
        <item
            android:id="@+id/it_caidat"
            android:title="@string/caidat"
            android:icon="@drawable/caidat"
            />
    </group>
</menu>