<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="luongduongquan.com.apporderfood.MainActivity"
    android:background="@color/colorBackGroundDangKy">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangky"
        android:layout_above="@+id/llDangKy"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/textsize30"
        android:textStyle="bold"
        android:textColor="@color/colorBackGroundWhite"
        />

    <LinearLayout
        android:id="@+id/llDangKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/padding20dp">
        <EditText
            android:id="@+id/edtTenDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding10dp"
            android:layout_margin="@dimen/padding10dp"
            android:hint="@string/tendangnhap"
            android:textColorHint="@color/colorTextHint"
            android:background="@color/colorBackGroundWhite"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/padding10dp"
            />

        <EditText
            android:id="@+id/edtMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:padding="@dimen/padding10dp"
            android:layout_margin="@dimen/padding10dp"
            android:hint="@string/matkhau"
            android:textColorHint="@color/colorTextHint"
            android:background="@color/colorBackGroundWhite"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/padding10dp"
            />
        <RadioGroup
            android:id="@+id/rdGroupGioiTinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gioitinhnam"/>
            <RadioButton
                android:id="@+id/rdNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gioitinhnu"/>
        </RadioGroup>

        <EditText
            android:id="@+id/edtNgaySinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding10dp"
            android:layout_margin="@dimen/padding10dp"
            android:hint="@string/ngaysinh"
            android:textColorHint="@color/colorTextHint"
            android:background="@color/colorBackGroundWhite"
            android:drawableLeft="@drawable/calender"
            android:drawablePadding="@dimen/padding10dp"
            />

        <EditText
            android:id="@+id/edtCMND"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding10dp"
            android:layout_margin="@dimen/padding10dp"
            android:hint="@string/chungminh"
            android:textColorHint="@color/colorTextHint"
            android:background="@color/colorBackGroundWhite"
            android:drawableLeft="@drawable/idcard"
            android:drawablePadding="@dimen/padding10dp"
            android:numeric="decimal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btnDongY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/padding10dp"
                android:layout_margin="@dimen/padding10dp"
                android:text="@string/dongy"
                android:background="@color/colorBtnDongY"/>
            <Button
                android:id="@+id/btnThoat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/padding10dp"
                android:layout_margin="@dimen/padding10dp"
                android:text="@string/thoat"
                android:background="@color/colorBtnThoat"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
