<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGroundWhite"
    android:orientation="vertical"
    tools:context="luongduongquan.com.apporderfood.ThemBanAnActivity">


    <EditText
        android:id="@+id/edtThemTenBanAn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintThemBanAn"
        android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDongY_ThemBanAn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dongy"/>
        <Button
            android:id="@+id/btnThoat_ThemBanAn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoat"/>
    </LinearLayout>


</LinearLayout>
